<resources>
    <string name="app_name">Tabata Timer</string>
    <string name="bottom_nav_timers">Timers</string>
    <string name="bottom_nav_sequences">Sequences</string>
    <string name="new_timer">New timer</string>
    <string name="item_removed">Item removed</string>
    <string name="undo_action">Undo</string>
    <string name="edit_timer">Edit timer</string>
    <string name="delete_item">Delete item</string>
    <string name="items_selected">Items Selected</string>
    <string name="delete_selected_items">Delete selected items?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_sequence">Create sequence</string>
    <string name="new_sequence">New sequence</string>
    <string name="edit_sequence">Edit sequence</string>
    <string name="select_items">Select items</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="preparation">Preparation</string>
    <string name="workout">Workout</string>
    <string name="rest">Rest</string>
    <string name="cycles">Cycles</string>
    <string name="cycles_remaining">Cycles remaining</string>
    <string name="color">Color</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="finished">Finished</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="timer_color">Timer color</string>
    <string name="total_timers">Total timers:&#160;</string>
    <string name="total_length">Total length:&#160;</string>
    <string name="preparation_colon_space">Preparation:&#160;</string>
    <string name="workout_colon_space">Workout:&#160;</string>
    <string name="rest_colon_space">Rest:&#160;</string>
    <string name="cycles_colon_space">Cycles:&#160;</string>
    <string name="total_colon_space">Total:&#160;</string>
    <string name="language">Language</string>
    <string name="clear_app_data">Clear application data</string>
    <string name="clear_data_dialog_message">WARNING: All user data is going to be cleared. Application will be stopped</string>
    <string name="clear">Clear</string>
    <string name="font_size">Font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string-array name="locale_entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="locale_values">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="font_size_entries">
        <item>@string/small</item>
        <item>@string/medium</item>
        <item>@string/large</item>
    </string-array>

    <string-array name="font_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>