<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:orientation="vertical"
    android:background="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="?attr/card_view_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/comfortaa"
                android:text="sample"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingBottom="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="sample"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preparation_colon_space" />

                <TextView
                    android:id="@+id/prep_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workout_colon_space" />

                <TextView
                    android:id="@+id/workout_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_colon_space" />

                <TextView
                    android:id="@+id/rest_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cycles_colon_space" />

                <TextView
                    android:id="@+id/cycles_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_colon_space"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sample"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:clickable="false" />

    </LinearLayout>

</androidx.cardview.widget.CardView>