<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layout_background_color"
    android:orientation="vertical"
    tools:context=".ui.activities.TimerDetailActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="?attr/card_view_background_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/timer_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"
                            android:backgroundTint="?attr/edit_text_background_tint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/timer_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:backgroundTint="?attr/edit_text_background_tint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/timer_color"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/chosen_color"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:background="@color/colorPrimary" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="?attr/card_view_background_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/preparation"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/prep_decrement"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textStyle="bold"
                            android:text="—" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/prep_display"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:background="@drawable/border_gray"
                            android:layout_height="match_parent"
                            android:maxLength="4"
                            android:text="0"
                            android:inputType="number"
                            android:gravity="center" />

                        <Button
                            android:id="@+id/prep_increment"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textSize="25sp"
                            android:text="+"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/workout"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/workout_decrement"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textStyle="bold"
                            android:text="—" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/workout_display"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:background="@drawable/border_gray"
                            android:layout_height="match_parent"
                            android:text="1"
                            android:maxLength="4"
                            android:inputType="number"
                            android:gravity="center" />

                        <Button
                            android:id="@+id/workout_increment"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textSize="25sp"
                            android:text="+"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rest"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/rest_decrement"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textStyle="bold"
                            android:text="—" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/rest_display"
                            android:layout_width="0dp"
                            android:layout_weight="10"
                            android:background="@drawable/border_gray"
                            android:layout_height="match_parent"
                            android:text="0"
                            android:maxLength="4"
                            android:inputType="number"
                            android:gravity="center" />

                        <Button
                            android:id="@+id/rest_increment"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textSize="25sp"
                            android:text="+"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cycles"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/cycles_decrement"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textStyle="bold"
                            android:text="—" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/cycles_display"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:background="@drawable/border_gray"
                            android:gravity="center"
                            android:inputType="number"
                            android:maxLength="4"
                            android:text="1" />

                        <Button
                            android:id="@+id/cycles_increment"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:padding="0dp"
                            android:textSize="25sp"
                            android:text="+"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>