<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.TimerFragment">

    <LinearLayout
        android:id="@+id/prep_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/preparation"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/prep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:text="166m 39s"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/workout_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/workout"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/workout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:text="166m 39s"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/rest_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/rest"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/rest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:text="166m 39s"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/cycles_remaining"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/cycles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:textAlignment="textEnd"
            android:text="9999"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_skip_previous_50"
            android:tint="@android:color/white"
            android:background="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/start_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_start_50"
            android:tint="@android:color/white"
            android:background="@color/colorPrimary" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_pause_50"
            android:tint="@android:color/white"
            android:background="@color/colorPrimary"
            android:alpha="0.5"
            android:clickable="false" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_skip_next_50"
            android:tint="@android:color/white"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>